Thu Nov 12 00:33:44 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_regexp): Major changes to accept
 	patterns and return true Perl regexps.  The 'regexp' type is now
 	parsed.
	(parse_regexp_array): Call parse_regexp; return arrayref of parsed
 	regexps.

	* lib/Mj/Access.pm (_d_advertise): Adjust to advertise and
 	noadvertise being parsed arrays (i.e. config_get returns
 	arrayrefs).  Do comparisons on stripped addresses.

Wed Nov 11 18:10:58 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/FileRepl.pm (open): Be even safer: nondestructively
 	create the file if it doesn't exist.

	* lib/Mj/Config.pm (parse_regexp): Call Mj::_re_match properly.

        * Rememberance Day: Lest we forget.

Tue Nov 10 00:36:26 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* postinstall (make_alias_symlinks): If requested, make symlinks
 	from an appropriate root-owned place to the generated alias and
 	vut files.

	* lib/Majordomo.pm (is_subscriber): Fix typo.

Mon Nov  9 17:40:44 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* postinstall (do_site_config): Push various MTA options into the
 	site config.

	* lib/Majordomo.pm (_reg_lookup): Invalid or anonymous addresses
 	are never registered.

	* lib/Mj/List.pm (is_subscriber): Invalid or anonymous addresses
 	are never subscribers.
	(aux_is_member): Was very crusty; should be reasonable now.

	* bin/mj_confirm: When an address is required, use
 	'unknown@anonymous' (i.e. an anonymous address) so we can still
 	extract information.  This address is special cased as being
 	valid.

	* lib/Mj/Addr.pm (isanon): New function.
	(new): Deal with anonymous addresses.

	* lib/Majordomo.pm (_get_stock): Quiet $undexflags undef warning.
	(dispatch): Clean up and bring sanity to address validation.

	* postinstall (do_config): Make the spool directory inside of the
 	filespace.  Also make the public directory.
